fixed the obsene amount of int() parsing

--- a/4.ipynb
+++ b/4.ipynb
@@ -30,7 +30,8 @@
     "        else:\n",
     "            for k in s:\n",
     "                format_i.append(k)\n",
-    "    format_data.append(format_i)"
+    "    format_data.append(format_i)\n",
+    "format_data = [list(map(int, i)) for i in format_data]"
    ]
   },
   {
@@ -41,9 +42,8 @@
    "source": [
     "counting = 0\n",
     "for i in format_data:\n",
-    "    if( ((int(i[0]) <= int(i[2])) and (int(i[1]) >= int(i[3]))) or \n",
-    "       ((int(i[2]) <= int(i[0])) and (int(i[3]) >= int(i[1])))):\n",
-    "        #print(i)\n",
+    "    if( ((i[0] <= i[2]) and (i[1] >= i[3])) or \n",
+    "       ((i[2] <= i[0]) and (i[3] >= i[1]))):\n",
     "        counting +=1"
    ]
   },
@@ -81,7 +81,7 @@
    "source": [
     "count = 0\n",
     "for i in format_data:\n",
-    "    t = overlap(int(i[0]),int(i[1]),int(i[2]),int(i[3]))\n",
+    "    t = overlap(i[0],i[1],i[2],i[3])\n",
     "    #I had misread the assingment and made a function that return the amount of overlap\n",
     "    #Where i could have just made it true or false.\n",
     "    if(t > 0):\n",
