7th advent minor changes

--- a/7.ipynb
+++ b/7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rod' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\bloec\\Desktop\\Programmer\\Python\\Advent-Of-Code-2022\\7.ipynb Cell 2\u001b[0m in \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Root is its own parent so .. on root is still root\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rod \u001b[39m=\u001b[39m Node(\u001b[39m\"\u001b[39m\u001b[39mrod\u001b[39m\u001b[39m\"\u001b[39m,rod)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m child \u001b[39m=\u001b[39m Node(\u001b[39m\"\u001b[39m\u001b[39mchild\u001b[39m\u001b[39m\"\u001b[39m, rod)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m childchild \u001b[39m=\u001b[39m Node(\u001b[39m\"\u001b[39m\u001b[39mchildchild\u001b[39m\u001b[39m\"\u001b[39m,child)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rod' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Root is its own parent so .. on root is still root\n",
-    "rod = Node(\"rod\",rod)\n",
+    "rod = Node(\"rod\",None)\n",
     "\n",
     "child = Node(\"child\", rod)\n",
     "childchild = Node(\"childchild\",child)\n",
@@ -211,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
