--- a/7.ipynb
+++ b/7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,21 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rod' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\bloec\\Desktop\\Programmer\\Python\\Advent-Of-Code-2022\\7.ipynb Cell 2\u001b[0m in \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Root is its own parent so .. on root is still root\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rod \u001b[39m=\u001b[39m Node(\u001b[39m\"\u001b[39m\u001b[39mrod\u001b[39m\u001b[39m\"\u001b[39m,rod)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m child \u001b[39m=\u001b[39m Node(\u001b[39m\"\u001b[39m\u001b[39mchild\u001b[39m\u001b[39m\"\u001b[39m, rod)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bloec/Desktop/Programmer/Python/Advent-Of-Code-2022/7.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m childchild \u001b[39m=\u001b[39m Node(\u001b[39m\"\u001b[39m\u001b[39mchildchild\u001b[39m\u001b[39m\"\u001b[39m,child)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'rod' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Root is its own parent so .. on root is still root\n",
     "rod = Node(\"rod\",None)\n",
@@ -112,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/7.test.txt\") as file:\n",
+    "with open(\"data/7.txt\") as file:\n",
     "      data = [i for i in file.read().strip().split('\\n')]\n",
     "print(data)"
    ]
