--- a/8.ipynb
+++ b/8.ipynb
@@ -2,29 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], []]\n",
-      "[[3, 0, 3, 7, 3, 2, 5, 5, 1, 2, 6, 5, 3, 3, 2, 3, 3, 5, 4, 9, 3, 5, 3, 9, 0], [3, 0, 3, 7, 3, 2, 5, 5, 1, 2, 6, 5, 3, 3, 2, 3, 3, 5, 4, 9, 3, 5, 3, 9, 0], [3, 0, 3, 7, 3, 2, 5, 5, 1, 2, 6, 5, 3, 3, 2, 3, 3, 5, 4, 9, 3, 5, 3, 9, 0], [3, 0, 3, 7, 3, 2, 5, 5, 1, 2, 6, 5, 3, 3, 2, 3, 3, 5, 4, 9, 3, 5, 3, 9, 0], [3, 0, 3, 7, 3, 2, 5, 5, 1, 2, 6, 5, 3, 3, 2, 3, 3, 5, 4, 9, 3, 5, 3, 9, 0]]\n"
+      "[[3, 0, 3, 7, 3], [2, 5, 5, 1, 2], [6, 5, 3, 3, 2], [3, 3, 5, 4, 9], [3, 5, 3, 9, 0]]\n"
      ]
     }
    ],
    "source": [
     "with open(\"data/8.txt\") as file:\n",
-    "      data_temp = [i for i in (file.read().split('\\n'))]\n",
+    "      data = file.read()\n",
+    "\n",
+    "nested_list = [[int(digit) for digit in number] for number in data.split()]\n",
     "     \n",
-    "length = len(data_temp)\n",
-    "data = [[]] * length\n",
-    "print(data)\n",
-    "for i in range(length):\n",
-    "    for str in data_temp[i]:\n",
-    "        data[i].append(int(str))\n",
-    "print(data)"
+    "print(nested_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0\n",
+      "3\n",
+      "7\n",
+      "3\n",
+      "2\n",
+      "5\n",
+      "5\n",
+      "1\n",
+      "2\n",
+      "6\n",
+      "5\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "5\n",
+      "4\n",
+      "9\n",
+      "3\n",
+      "5\n",
+      "3\n",
+      "9\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for "
    ]
   }
  ],
@@ -35,7 +78,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   },
   "orig_nbformat": 4
