--- a/8.ipynb
+++ b/8.ipynb
@@ -2,64 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3, 0, 3, 7, 3], [2, 5, 5, 1, 2], [6, 5, 3, 3, 2], [3, 3, 5, 4, 9], [3, 5, 3, 9, 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(\"data/8.txt\") as file:\n",
-    "      data = file.read()\n",
-    "\n",
-    "nested_list = [[int(digit) for digit in number] for number in data.split()]\n",
-    "     \n",
-    "print(nested_list)"
+    "#My initial idea was to evaluate every tree individually, \n",
+    "#but I have instead opted to look from left to right through the output\n",
+    "#and store the current highest tree from that point of view and when a tree that is higher \n",
+    "#is found i increment and denode the counted tree with -1 so it doesnt gets counted twice.\n",
+    "#\n",
+    "#Using numpy matixes i can rotate the data and do this 4 times to find every instance  \n",
+    "import numpy as np"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "0\n",
-      "3\n",
-      "7\n",
-      "3\n",
-      "2\n",
-      "5\n",
-      "5\n",
-      "1\n",
-      "2\n",
-      "6\n",
-      "5\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "5\n",
-      "4\n",
-      "9\n",
-      "3\n",
-      "5\n",
-      "3\n",
-      "9\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -67,8 +21,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for "
+    "with open(\"data/8.txt\") as file:\n",
+    "      data = file.read()\n",
+    "\n",
+    "nested_list = [[int(digit) for digit in number] for number in data.split()]\n",
+    "     \n",
+    "print(nested_list)\n",
+    "numpy_matrix = np.matrix(nested_list)\n",
+    "print(numpy_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_x = numpy_matrix[0]\n",
+    "m_y = numpy_matrix[1]\n",
+    "for i in numpy_matrix:\n",
+    "    smallest = -1\n",
+    "    for j in range(int(m_y)):\n",
+    "        if smallest < numpy_matrix[i,j]:\n",
+    "            smallest = numpy_matrix[i,j]\n",
+    "            print(smallest)\n",
+    "            numpy_matrix[i,j] = -1\n",
+    "            print(i,j)\n",
+    "print(numpy_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in numpy_matrix:\n",
+    "    for j in i:\n",
+    "        print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3 < numpy_matrix[0,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
