--- a/8.ipynb
+++ b/8.ipynb
@@ -37,7 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tree_line_counter"
+    "def tree_line_counter(line):\n",
+    "    x = 0\n",
+    "    for i in line:\n",
+    "\n",
+    "\n",
+    "    return x"
    ]
   }
  ],
