--- a/8.ipynb
+++ b/8.ipynb
@@ -50,6 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "scores = []\n",
+    "#Part 1\n",
     "for row in range(1, ROWS-1):\n",
     "    for col in range(1,COLOUMNS-1):\n",
     "        tree = data[row][col]\n",
@@ -61,7 +63,35 @@
     "        if max(left)<tree or max(right)<tree or max(up)<tree or max(down)<tree:\n",
     "            total += 1\n",
     "\n",
-    "print(total)"
+    "        #part 2 \n",
+    "        score = 1\n",
+    "        for lst in (left,right,up,down):\n",
+    "            tracker = 0\n",
+    "            for i in range(len(lst)):\n",
+    "                if lst[i] < tree: \n",
+    "                    tracker += 1\n",
+    "                elif lst[i] == tree: \n",
+    "                    tracker += 1\n",
+    "                    break\n",
+    "                else: \n",
+    "                    tracker += 1\n",
+    "                    break\n",
+    "\n",
+    "\n",
+    "            score *= tracker\n",
+    "\n",
+    "        scores.append(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(total)\n",
+    "print(scores)\n",
+    "print(max(scores))"
    ]
   }
  ],
