9th part 2 solved (cleaned)

--- a/9.ipynb
+++ b/9.ipynb
@@ -37,8 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Head = [0,0]\n",
-    "Tail = [0,0]\n",
+    "list_of_knots = [[0,0],[0,0]]\n",
     "Hasbeen = [(0,0)]\n"
    ]
   },
@@ -48,20 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reset():\n",
-    "    Head = [0,0]\n",
-    "    Tail = [0,0]\n",
-    "    Hasbeen = [(0,0)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def log_pos(item):\n",
-    "    Hasbeen.append((item[0],item[1]))"
+    "    if (item[0],item[1]) not in Hasbeen:\n",
+    "        Hasbeen.append((item[0],item[1]))"
    ]
   },
   {
@@ -70,38 +58,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def updateTail():\n",
+    "def update_knot(listA, listB):\n",
     "    #There definitly is a smarter way to do this. \n",
-    "    if math.sqrt((Head[0] - Tail[0])**2 + (Head[1] - Tail[1])**2) == 2.0:\n",
+    "    if math.sqrt((listA[0] - listB[0])**2 + (listA[1] - listB[1])**2) == 2.0:\n",
     "        #Vertical\n",
-    "        if Head[0] == Tail[0]:\n",
-    "            if Head[1] > Tail[1]:\n",
-    "                Tail[1] += 1\n",
+    "        if listA[0] == listB[0]:\n",
+    "            if listA[1] > listB[1]:\n",
+    "                listB[1] += 1\n",
     "            else:\n",
-    "                Tail[1] -=1\n",
+    "                listB[1] -=1\n",
     "        #Horizontal\n",
-    "        if Head[1] == Tail[1]:\n",
-    "            if Head[0] > Tail[0]:\n",
-    "                Tail[0] += 1\n",
+    "        if listA[1] == listB[1]:\n",
+    "            if listA[0] > listB[0]:\n",
+    "                listB[0] += 1\n",
     "            else:\n",
-    "                Tail[0] -=1\n",
-    "    elif math.sqrt((Head[0] - Tail[0])**2+ (Head[1] - Tail[1])**2) > 2.0: \n",
+    "                listB[0] -=1\n",
+    "    elif math.sqrt((listA[0] - listB[0])**2+ (listA[1] - listB[1])**2) > 2.0: \n",
     "        #Diagonal Cases\n",
-    "        if (Head[0] > Tail[0]):\n",
-    "            Tail[0] += 1\n",
-    "            if (Head[1] > Tail[1]):\n",
-    "                Tail[1] += 1\n",
+    "        if (listA[0] > listB[0]):\n",
+    "            listB[0] += 1\n",
+    "            if (listA[1] > listB[1]):\n",
+    "                listB[1] += 1\n",
     "            else:            \n",
-    "              Tail[1] -= 1  \n",
+    "              listB[1] -= 1  \n",
     "        else: \n",
-    "            Tail[0] -= 1\n",
-    "            if (Head[1] > Tail[1]):\n",
-    "                Tail[1] += 1\n",
+    "            listB[0] -= 1\n",
+    "            if (listA[1] > listB[1]):\n",
+    "                listB[1] += 1\n",
     "            else:            \n",
-    "                Tail[1] -= 1  \n",
+    "                listB[1] -= 1  \n",
     "        \n",
     "    #print(Tail)\n",
-    "    log_pos(Tail)\n",
+    "    log_pos(list_of_knots[-1])\n",
     "    return "
    ]
   },
@@ -111,23 +99,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def move(command, unit):\n",
+    "def move_head(command, unit):\n",
+    "    Head = list_of_knots[0]\n",
+    "    Tail = list_of_knots[-1]\n",
     "    if command == \"U\":\n",
     "        for i in range(unit):\n",
     "            Head[1] += 1\n",
-    "            updateTail()\n",
+    "            for i in range (1,len(list_of_knots)):\n",
+    "                update_knot(list_of_knots[i-1],list_of_knots[i])\n",
     "    elif command == \"L\":\n",
     "        for i in range(unit):\n",
     "            Head[0] -= 1\n",
-    "            updateTail()\n",
+    "            for i in range (1,len(list_of_knots)):\n",
+    "                update_knot(list_of_knots[i-1],list_of_knots[i])\n",
     "    elif command == \"R\":\n",
     "        for i in range(unit):\n",
     "            Head[0] += 1\n",
-    "            updateTail()\n",
+    "            for i in range (1,len(list_of_knots)):\n",
+    "                update_knot(list_of_knots[i-1],list_of_knots[i])\n",
     "    elif command == \"D\":\n",
     "        for i in range(unit):\n",
     "            Head[1] -= 1\n",
-    "            updateTail() "
+    "            for i in range (1,len(list_of_knots)):\n",
+    "                update_knot(list_of_knots[i-1],list_of_knots[i])"
    ]
   },
   {
@@ -137,8 +131,8 @@
    "outputs": [],
    "source": [
     "def debugger():\n",
-    "    print(\"Head:\",Head)\n",
-    "    print(\"Tail:\",Tail)\n",
+    "    for i,val in enumerate(list_of_knots):\n",
+    "        print(i, \"is at: \", val)\n",
     "    print(\"HasBeen:\", Hasbeen)"
    ]
   },
@@ -148,7 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reset()"
+    "for line in data:\n",
+    "    move_head(line[0],int(line[1]))\n",
+    "print(\"Part 1: \", len(Counter(Hasbeen).keys()))"
    ]
   },
   {
@@ -157,7 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(math.sqrt((Head[0] - Tail[0])**2)+ ((Head[1] - Tail[1])**2))"
+    "list_of_knots = []\n",
+    "for i in range(10):\n",
+    "    list_of_knots.append([0,0])\n",
+    "Hasbeen = [(0,0)]"
    ]
   },
   {
@@ -167,16 +166,8 @@
    "outputs": [],
    "source": [
     "for line in data:\n",
-    "    move(line[0],int(line[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Part 1: \", len(Counter(Hasbeen).keys()))\n"
+    "    move_head(line[0],int(line[1]))\n",
+    "print(\"Part 2: \", len(Counter(Hasbeen).keys()))"
    ]
   }
  ],
