10th part 2 solved and cleaned

--- a/10.ipynb
+++ b/10.ipynb
@@ -6,21 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# addx takes 2 cycles \n",
-    "# noop does nothing but takes a cycle\n",
-    "addx = 2\n",
-    "noop = 1\n",
-    "stop = 20 \n",
-    "duration = 40\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open(\"data/10.txt\") as file:\n",
     "    data = [row.strip().split() for row in file]\n",
     "\n",
@@ -35,13 +20,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def render(pos,cycle):\n",
+    "    if ((cycle-1) % 40) in [pos-1,pos,pos+1]:\n",
+    "        buffer.append(\"#\")   \n",
+    "    else:\n",
+    "        buffer.append(\".\")\n",
+    "    if cycle in [40,80,120,160,200,240]:\n",
+    "        buffer.append(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test = data.copy()\n",
-    "#print(test)\n",
     "instruction = [\"\", 0]\n",
     "x = [0,1]\n",
+    "buffer = []\n",
     "\n",
-    "for cycle in range(1,221):\n",
-    "    #print(instruction)\n",
+    "for cycle in range(1,241):\n",
+    "    render(x[-1],cycle)\n",
+    "\n",
     "    if instruction[0] == \"nextadd\":\n",
     "        x.append(x[-1] + instruction[-1])\n",
     "        instruction = [\"\", 0]\n",
@@ -49,7 +50,6 @@
     "\n",
     "    if instruction[0] == \"\":\n",
     "        instruction = test.pop(0)\n",
-    "        #print(instruction)\n",
     "    \n",
     "    if instruction[0] == \"addx\": \n",
     "        instruction[0] = \"nextadd\"\n",
@@ -59,9 +59,7 @@
     "\n",
     "    x.append(x[-1])\n",
     "\n",
-    "#print(x)\n",
-    "\n",
-    "#print(x[20],x[60],x[100],x[140],x[180],x[220], x[20]+x[60]+x[100]+x[140]+x[180]+x[220]) "
+    "\n"
    ]
   },
   {
@@ -75,7 +73,9 @@
     "    print(i, \"times\", x[i], \":\", i * x[i])\n",
     "    sum_signal += i * x[i]\n",
     "\n",
-    "print(\"Part 1:\", sum_signal)"
+    "print(\"Part 1:\", sum_signal)\n",
+    "print(\"Part 2:\")\n",
+    "print(''.join(buffer))"
    ]
   }
  ],
